# SamBot_nb2

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
data/manager/: plugin_list.yml
data/xiuxian/: config.yaml  items.json  xiuxian.db  境界.json  悬赏令.json  灵根.json  灵根_beifen.json  突破概率.json
data/xiuxian/players/3066125819/: bankinfo.json  workinfo.json
data/xiuxian/功法/: 主功法.json  功法概率设置.json  神通.json
sambot_nb2/plugins/nonebot_plugin_xiuxian/: __init__.py  data_source.py  xiuxian2_handle.py  xiuxian_config.py  xiuxian_opertion.py
